still trying to fix new workflow pickup

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,10 @@
 
 name: Publish
 
-on: workflow_dispatch
+on: 
+    push:
+        branches:
+            - dev/publish-workflow
 
 jobs:
     build:
