--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,4 +30,5 @@ jobs:
             - name: Build rpm
               working-directory: ./packaging
               run: ./pkg.sh rpm --debug
-                
+            - name: confirm packages
+              run: ls packaging
