--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,13 @@ jobs:
                 python-version: 3.7
             - name: Install other deps
               run: |
-                sudo apt-get install -y ruby ruby-dev rubygems build-essential python3 virtualenv
+                sudo apt-get update
+                sudo apt-get install -y ruby \
+                                        ruby-dev \
+                                        rubygems \
+                                        build-essential \
+                                        python3 \
+                                        virtualenv
             - name: Install fpm
               run: sudo gem install fpm
             - name: Install python deps
