Use the TPAExec yaml format
Changes the news.yml format to the one used by TPAExec and extends the
format as follows:

- An author field is added which is used in the rpm and deb changelogs
  (but not the human readable changelog).
- The release date is now expected in ISO8601.
- An optional iteration field can be provided which defaults to 1.

Lines are broken and wrapped according to the requirements of the
destination format.

--- a/pg_backup_api/news.yml
+++ b/pg_backup_api/news.yml
@@ -1,9 +1,13 @@
+# © Copyright EnterpriseDB UK Limited 2021-2022 - All rights reserved.
+
 # pg-backup-api News - History of user-visible changes
 
-- version: "0.1.0"
-  author:
-    name: "Jane Threefoot"
-    email: "jane.threefoot@enterprisedb.com"
-  release_date: "20220328T1600Z"
-  changes:
-    - "Initial release"
+pg-backup-api release notes:
+  - version: "0.1.0"
+    date: "20220328T1600Z"
+    author:
+      name: "Jane Threefoot"
+      email: "jane.threefoot@enterprisedb.com"
+    changes:
+      Notable changes:
+        - "Pre-release"
