Change data_checksums to string
Updates data_checksums so that it is a string rather than a boolean.
This fixes a bug where any non-empty string, such as 'off', would
give an output of `data_checksums: true`.

--- a/pg_backup_api/pg_backup_api/spec/pg_backup_api.yaml
+++ b/pg_backup_api/pg_backup_api/spec/pg_backup_api.yaml
@@ -761,8 +761,10 @@ components:
           description: The current WAL of the PostgreSQL server
           type: string
         data_checksums:
-          description: Whether data checksums are enabled for the PostgreSQL server
-          type: boolean
+          description: >
+            Whether data checksums are enabled for the PostgreSQL server - can be either
+            `on` or `off`
+          type: string
         data_directory:
           description: The current path to the PGDATA directory of the PostgreSQL server
           type: string
