--- a/pg_backup_api/requirements.txt
+++ b/pg_backup_api/requirements.txt
@@ -1,31 +1,3 @@
-argcomplete==2.0.0
-attrs==21.4.0
-barman>=3.0.0
-certifi==2021.10.8
-charset-normalizer==2.0.10
-click==8.0.3
-clickclick==20.10.2
-connexion==2.10.0
-dataclasses>=0.6
-Flask==2.0.2
-gunicorn==20.1.0
-idna==3.3
-importlib-metadata==4.8.3
-inflection==0.5.1
-isodate==0.6.1
-itsdangerous==2.0.1
-Jinja2==3.0.3
-jsonschema==3.2.0
-MarkupSafe==2.0.1
-openapi-schema-validator==0.1.6
-openapi-spec-validator==0.3.2
-psycopg2==2.9.3
-pyrsistent==0.16.1
-python-dateutil==2.8.2
-PyYAML==5.4.1
-requests==2.27.1
-six==1.16.0
-typing-extensions==4.0.1
-urllib3==1.26.8
-Werkzeug==2.0.2
-zipp==3.6.0
+barman>=2.19,<4.0.0
+Flask>=1.1.4,<3.0.0
+requests>=2.0.0,<3.0.0
