Make compression field for WAL compression nullable
This field can be null in the Barman output so the schema is updated
such that it is nullable.

--- a/pg_backup_api/pg_backup_api/spec/pg_backup_api.yaml
+++ b/pg_backup_api/pg_backup_api/spec/pg_backup_api.yaml
@@ -189,6 +189,7 @@ components:
           type: integer
         compression:
           description: Standard compression algorithm applied to WAL files
+          nullable: true
           type: string
         configuration_files_directory:
           description: Directory for additional configuration files to be included
@@ -910,6 +911,7 @@ components:
       properties:
         compression:
           description: Compression algorithm used to compress the WAL
+          nullable: true
           type: string
         name:
           description: Name of the WAL segment
